--- a/Style/Animation.css
+++ b/Style/Animation.css
@@ -1,3 +1,5 @@
+/*Animation sur produit Begin -------------------------------------------------------------------------------------------------*/
+
 #produits .view .mask {
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
@@ -82,6 +84,8 @@
    transition-delay: 0.2s;
 }
 
+
+/*Animation sur about Begin -------------------------------------------------------------------------------------------------*/
 #about .view img{
     transition: all 0.5s ease-out;
    opacity: 1;
@@ -127,6 +131,8 @@
     transform: translateY(0px);
    transition-delay: 0.5s;
 }
+
+/*Animation sur services    Begin -------------------------------------------------------------------------------------------------*/
 
 #services .view .mask {
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
