--- a/Style/Style.css
+++ b/Style/Style.css
@@ -217,6 +217,39 @@ i.mdi-communication-live-help{
 	background: url(../images/accesoirs.png) no-repeat center center ;
 	background-size: cover;
 }
+#index_produit .container{
+  margin: 0; 
+  padding: .25em 0em .25em 0em;
+  text-align: center;
+  background-color: rgba(0,0,0,0);
+  width: 6.5cm;
+  height: 22cm;
+  margin-left: 15px;
+}
+#index_produit ul{
+	border: 10px;
+	border-color: rgba(0,0,0,0.4)
+	-webkit-box-shadow: 10px 10px 10px rgba(0,0,0,0.3);
+ 	-moz-box-shadow: 10px 10px 10px rgba(0,0,0,0.3);
+  	box-shadow: 10px 10px 10px rgba(0,0,0,0.3);
+
+}
+#index_produit .collection .collection-item{
+	border-bottom: 0px;
+}
+#index_produit .collection-item.avatar{
+	height:115px;
+	background-color:#37474f;
+}
+#index_produit .collection-item.avatar:hover{
+	background-color: rgba(173, 20, 87, 0.7);
+}
+#index_produit .collection a p{
+	color:#ffffff;
+}
+#index_produit .collection span{
+	color:#ffffff;
+}
 
 
 
