--- a/Style/Style.css
+++ b/Style/Style.css
@@ -609,17 +609,21 @@ footer ul li a{
 /*------------------------------------------------admin BEGIN------------------------------------------------------*/
 
 #admin .container{
-  margin: 0; 
+  margin: 0px; 
   padding: .25em 0em .25em 0em;
   text-align: center;
-  box-shadow: 0 0 10px rgba(0,0,0,0.4);
-  background-color: rgba(255, 255, 255, 1);
-  width: 6.5cm;
-  height: 22cm;
+  margin-top: 0px;
+  margin-left: 0px;
+  width: 100%;
+  height: 100%;
+}
+#admin .sidebar{
+  background-color: white;
 }
 
 #admin ul{
   margin-top: 100px;
+  height: auto;
 }
 
 #modal_sign .container{
