--- a/Style/Style.css
+++ b/Style/Style.css
@@ -615,15 +615,20 @@ footer ul li a{
   margin-top: 0px;
   margin-left: 0px;
   width: 100%;
-  height: 100%;
+  max-height: 22cm;
 }
 #admin .sidebar{
   background-color: white;
+  height: 22cm;
 }
 
 #admin ul{
   margin-top: 100px;
   height: auto;
+}
+
+#admin .tabs{
+  margin-top: 0px;
 }
 
 #modal_sign .container{
