--- a/Style/Style.css
+++ b/Style/Style.css
@@ -21,7 +21,7 @@ body{
 */
 
 /*--------------------------------------navigation bar BEGIN----------------------------------------------------*/
-nav ul li a[data = signin]{
+nav ul li a[data = signin], nav ul li a[data = user]{
 	margin-right: 20px;
 }
 nav ul li a.active{
@@ -30,6 +30,15 @@ nav ul li a.active{
 nav ul li a:hover{
 
 	color:#f06292;
+}
+.navigation{
+    background-color: #37474f; 
+}
+.navigation li>a{
+	color: white;
+}
+.dropdown-content li:hover>a, .dropdown-content li.active>a {
+      color: #f06292;
 }
 /*--------------------------------------navigation bar END------------------------------------------------------*/
 
