--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -660,7 +660,13 @@ footer ul li a{
   border-radius: 5px;
   margin-bottom: 110px;
   margin-top: 50px;
+  width: 50%;
+}
+.Gender{
+    text-align: left;
 }
 
 
 /*------------------------------------------------admin END------------------------------------------------------*/
+
+/*------------------------------------------------Signup Begin------------------------------------------------------*/
