--- a/view/Style/Style_admin.css
+++ b/view/Style/Style_admin.css
@@ -33,5 +33,8 @@ nav .container{
 
 span.badge{
 	float: none;
-	margin-left: 30px;
+	margin-left: 20px;
 }
+
+span.badge.new:after {
+    content: " Unread"; }
