--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -241,7 +241,7 @@ i.mdi-communication-live-help{
 	color:#ffffff;
 }
 
-#index_produit ul{
+#index_produit .sidebar-container ul{
 	border: 10px;
 	border-color: rgba(0,0,0,0.4)
 	-webkit-box-shadow : 10px 10px 10px rgba(0,0,0,0.3);
@@ -264,6 +264,16 @@ i.mdi-communication-live-help{
 }
 #index_produit .collection span{
 	color:#ffffff;
+}
+.card .card-reveal{
+  overflow-y:hidden;
+  overflow:hidden;
+  background-color: #eceff1;
+}
+.card{
+  height:250px;
+  width:100%;
+  background-color: #eceff1;
 }
 
 
