--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -275,6 +275,9 @@ i.mdi-communication-live-help{
   width:100%;
   background-color: #eceff1;
 }
+#index_produit .collection-item.avatar a{
+  cursor:pointer;
+}
 
 
 
