--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -766,4 +766,8 @@ footer ul li a{
   background-color: #0097a7;
 }
 
+#Claim .affiTicket{
+  margin-bottom: 100px;
+}
+
 /*--------------------------------------------Claim END----------------------------------------------*/
