--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -21,9 +21,12 @@ body{
 */
 
 /*--------------------------------------navigation bar BEGIN----------------------------------------------------*/
-nav ul li a[data = signin], nav ul li a[data = user]{
+nav ul li a[data = signin]{
 	margin-right: 20px;
 }
+ nav ul li a[data = user]{
+  margin-right: 50px;
+ }
 nav ul li a.active{
 	background-color: rgba(173, 20, 87, 0.7);
 }
