--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -290,6 +290,16 @@ i.mdi-communication-live-help{
 .card .card-content a{
 
 }
+.mdi-action-star-rate{
+  color: #37474f;
+  font-size: 40px;
+  float: right;
+}
+.mdi-action-star-rate.fav{
+  color: #90caf9;
+  font-size: 40px;
+  float: right;
+}
 
 
 
