--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -25,7 +25,8 @@ nav ul li a[data = signin]{
 	margin-right: 20px;
 }
  nav ul li a[data = user]{
-  margin-right: 50px;
+  margin-right: 20px;
+  margin-left: 20px;
  }
 nav ul li a.active{
 	background-color: rgba(173, 20, 87, 0.7);
@@ -42,6 +43,16 @@ nav ul li a:hover{
 }
 .dropdown-content li:hover>a, .dropdown-content li.active>a {
       color: #f06292;
+}
+.mdi-action-shopping-cart{
+  margin-right: 20px;
+  margin-left: 20px;
+}
+nav .dropdown-button{
+  cursor: default;
+}
+nav .mdi-action-help{
+  cursor: help;
 }
 /*--------------------------------------navigation bar END------------------------------------------------------*/
 
@@ -311,13 +322,17 @@ i.mdi-communication-live-help{
   color: #37474f;
   font-size: 40px;
   float: right;
+  cursor: default;
 }
 .mdi-action-star-rate.fav{
   color: #90caf9;
   font-size: 40px;
   float: right;
+  cursor: default;
 }
-
+.bold{
+  font-weight: bold;
+}
 
 
 
