--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -825,3 +825,9 @@ footer ul li a{
 }
 
 /*--------------------------------------------Claim END----------------------------------------------*/
+
+/*--------------------------------------------Cart START----------------------------------------------*/
+
+.qte{
+    width: 50%;
+}
