--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -334,7 +334,9 @@ i.mdi-communication-live-help{
   font-weight: bold;
 }
 
-
+.resize_img{
+  height: 100px;
+}
 
 /*---------------------------------------------------produit END---------------------------------------------------*/
 
