height for the logo

--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -57,6 +57,7 @@ nav .brand-logo{
   font-family: HACKED;
   letter-spacing: 2px;
   box-shadow: 0 0 0 black;
+  height: 100%;
 }
 /*--------------------------------------navigation bar END------------------------------------------------------*/
 
