--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -850,6 +850,22 @@ footer ul li a{
 
 /*--------------------------------------------Claim END----------------------------------------------*/
 
+
+#faq{
+  height: 24cm;
+}
+
+#faq .container{
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  background-color: rgba(222,222,222,1);  border-radius: 5px;
+  margin-bottom: 60px;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  width: 80%;
+}
+
+/*--------------------------------------------FAQ END----------------------------------------------*/
+
 /*--------------------------------------------Cart START----------------------------------------------*/
 
 .qte{
