--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -785,7 +785,7 @@ footer ul li a{
   	margin-left: 1cm;
 }
 
-#profil .titre a{
+#profil .titre button{
 	margin-left: 400px;
 }
 
@@ -849,7 +849,7 @@ footer ul li a{
   margin-bottom: 100px;
 }
 
-/*--------------------------------------------Claim BEGIN----------------------------------------------*/
+/*--------------------------------------------FAQ BEGIN----------------------------------------------*/
 
 
 #faq{
@@ -871,6 +871,28 @@ footer ul li a{
 }
 
 /*--------------------------------------------FAQ END----------------------------------------------*/
+
+/*--------------------------------------------UpdateUser BEGIN----------------------------------------------*/
+
+
+#update{
+  height: 23cm;
+}
+
+#update .container{
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  background-color: rgba(222,222,222,1);  border-radius: 5px;
+  margin-bottom: 60px;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  width: 80%;
+  height: 16cm;
+}
+
+
+/*--------------------------------------------UpdateUser END----------------------------------------------*/
+
 
 /*--------------------------------------------Cart START----------------------------------------------*/
 
