--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -868,6 +868,22 @@ footer ul li a{
 
 /*--------------------------------------------FAQ END----------------------------------------------*/
 
+/*-------------------------------------------Password BEGIN-------------------------------------*/
+#forgot .container{
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  background-color: rgba(222,222,222,1);  border-radius: 5px;
+  margin-bottom: 60px;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  padding-top: 30px;
+  width: 80%;
+  height: 14cm;
+}
+#forgot form{
+  margin-top: 50px;
+}
+/*---------------------------------------------Password END----------------------------------------------*/
+
 /*--------------------------------------------Cart START----------------------------------------------*/
 
 .qte{
