--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -894,7 +894,7 @@ footer ul li a{
 
 
 #update{
-  height: 23cm;
+  height: 20cm;
 }
 
 #update .container{
@@ -905,7 +905,7 @@ footer ul li a{
   padding-bottom: 20px;
   padding-top: 30px;
   width: 80%;
-  height: 14cm;
+  height: 80%;
 }
 
 
