--- a/view/Style/Style.css
+++ b/view/Style/Style.css
@@ -120,10 +120,8 @@ i.mdi-communication-live-help{
 
 }
 .image_slide{
-	width: auto;
-	height: auto;
-	max-width: 977px;
-	max-height: 611px;	
+	width: 980px;
+	height: 615px;
 }
 #home.container{
 	width:977px;
